<resources>
    <string name="app_name">伊享云</string>
    <string name="Appname">伊享云,分享你的美好生活时刻</string>
    <string name="username">用户名</string>
    <string name="login">Sign in</string>
    <string name="login_zh">登 录</string>
    <string name="logo">LOGO</string>
    <string name="password">密码</string>
    <string name="rigister">我要注册>></string>
    <string name="my">我的</string>
    <string name="myalbum">个人相册</string>
    <string name="publish">广场</string>
    <string name="check_password">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="verification_code">验证码</string>
    <string name="fresh_vfcode">看不清，点击刷新</string>
    <string name="risiter_zh">注 册</string>
    <string name="login_tip_msg">啊哈?你好像没有登录欸！</string>
</resources>