<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cloud_"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/Appname"
            android:textColor="@color/ty"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_height="match_parent">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:hintTextColor="@color/ty"
            android:layout_marginRight="20dp"
            android:hint="@string/username"
            android:textColorHint="@color/ty"
            app:boxStrokeColor="@color/ty"
            android:layout_marginLeft="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yxyUsername"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            app:boxStrokeColor="@color/ty"
            android:textColorHint="@color/ty"
            app:hintTextColor="@color/ty"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/yxyPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <Button

            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/round_normal"
            android:text="@string/login_zh"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/ty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"

        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:backgroundTint="@android:color/white"
            android:outlineProvider="none"
            android:textColor="@color/ty"
            android:layout_height="wrap_content"
            android:text="@string/rigister"
            />
    </LinearLayout>
</LinearLayout>

