<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_collapseMode="pin"
                app:title="加入我们">
            </androidx.appcompat.widget.Toolbar>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:hintTextColor="@color/blue"
                android:layout_marginRight="20dp"
                android:hint="@string/username"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/blue"
                android:layout_marginLeft="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rgstUsername"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                app:boxStrokeColor="@color/blue"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/blue"
                android:hint="@string/password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rgstPassword"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                app:boxStrokeColor="@color/blue"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/blue"
                android:hint="@string/check_password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_rgstPassword"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"

                app:hintTextColor="@color/blue"
                android:layout_marginRight="20dp"
                android:hint="@string/nickname"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/blue"
                android:layout_marginLeft="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nickUsername"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vf_code"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopStart="30dp"

                app:hintTextColor="@color/blue"
                android:layout_marginRight="20dp"
                android:hint="@string/verification_code"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/blue"
                android:layout_marginLeft="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/vfcode_img"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="@drawable/image_view_whit_bg"
                android:layout_marginRight="20dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">
            <Button
                android:id="@+id/fresh_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:outlineProvider="none"
                android:backgroundTint="@android:color/white"
                android:text="@string/fresh_vfcode"
                android:textColor="@color/black">
            </Button>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/click_rgst"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/round_normal"
                android:text="@string/risiter_zh"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                app:backgroundTint="#2CBEA9" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>